<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryVariant"
            android:text="@string/inscription_apprenant"
            android:textColor="?attr/colorPrimary"
            android:textAlignment="center"
            android:paddingVertical="@dimen/largeur_text"
            android:textSize="@dimen/taille_titre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/prenom"
            android:textSize="@dimen/taille_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inscription" />

        <EditText
            android:id="@+id/prenomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edit_prenom"
            android:textSize="@dimen/taille_instruction"
            app:layout_constraintBaseline_toBaselineOf="@id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/nom"
            android:textSize="@dimen/taille_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/nomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edit_nom"
            android:textSize="@dimen/taille_instruction"
            app:layout_constraintBaseline_toBaselineOf="@id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/date_de_naissance"
            android:textSize="@dimen/taille_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edit_dateN"
            android:textSize="@dimen/taille_instruction"
            app:layout_constraintBaseline_toBaselineOf="@id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView7" />

        <TextView
            android:id="@+id/formation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="176dp"
            android:background="?attr/colorPrimaryVariant"
            android:textColor="?attr/colorPrimary"
            android:paddingVertical="@dimen/largeur_text"
            android:text="@string/formation"
            android:textAlignment="center"
            android:textSize="@dimen/taille_titre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/filière"
            android:textSize="@dimen/taille_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formation" />

        <EditText
            android:id="@+id/editFiliere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edit_filiere"
            android:textSize="@dimen/taille_instruction"
            app:layout_constraintBaseline_toBaselineOf="@id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/promotion"
            android:textSize="@dimen/taille_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/editPromotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edit_promotion"
            android:textSize="@dimen/taille_instruction"
            app:layout_constraintBaseline_toBaselineOf="@id/textView9"
            app:layout_constraintStart_toEndOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/année"
            android:textSize="@dimen/taille_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <EditText
            android:id="@+id/editAnnee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edit_annee"
            android:textSize="@dimen/taille_instruction"
            app:layout_constraintBaseline_toBaselineOf="@id/textView10"
            app:layout_constraintStart_toEndOf="@+id/textView10" />

        <TextView
            android:id="@+id/Encadrement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="356dp"
            android:background="?attr/colorPrimaryVariant"
            android:textColor="?attr/colorPrimary"
            android:paddingVertical="@dimen/largeur_text"
            android:text="@string/encadrement"
            android:textAlignment="center"
            android:textSize="@dimen/taille_titre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/sujet"
            android:textSize="@dimen/taille_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Encadrement" />

        <EditText
            android:id="@+id/editSujet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edit_sujet"
            android:textSize="@dimen/taille_instruction"
            app:layout_constraintBaseline_toBaselineOf="@id/textView11"
            app:layout_constraintStart_toEndOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/prenom"
            android:textSize="@dimen/taille_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Encadrement" />

        <EditText
            android:id="@+id/editprenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/editPrenom"
            android:textSize="@dimen/taille_instruction"
            app:layout_constraintBaseline_toBaselineOf="@id/textView12"
            app:layout_constraintStart_toEndOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="@string/nom"
            android:textSize="@dimen/taille_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Encadrement" />

        <EditText
            android:id="@+id/editNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/editNom"
            android:textSize="@dimen/taille_instruction"
            app:layout_constraintBaseline_toBaselineOf="@id/textView13"
            app:layout_constraintStart_toEndOf="@+id/textView13" />

        <Button
            android:id="@+id/buttonEnregistrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enregistrer"
            android:background="?attr/colorPrimary"
            android:textColor="?attr/colorPrimaryVariant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNom" />


</androidx.constraintlayout.widget.ConstraintLayout>